[package]
name = "licht-wecker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deconz-rs = { path = "../deconz-rs" }
tokio = { version = "1", features = ["full"] }
url = { version = "2.3" }
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
serde = "1.0"
serde_json = "1.0"
humantime-serde = "1.1"
humantime = "2.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"


